# cardputer-zero-default-apps

./: .dockerignore  .gitattributes  .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
applications/: 10-zero-settings.desktop  100-zero-app-store.desktop  20-zero-terminal.desktop  30-zero-files.desktop  40-zero-system-monitor.desktop  50-zero-robot.desktop  90-zero-power-menu.desktop
debian/: changelog  control  copyright  rules
docker/: Dockerfile.arm64
docs/: spec.md
scripts/: build-device-fixes.sh  docker-build-arm64.sh  repair-applaunch-assets.sh  repair-default-apps-runtime.sh  stage-device-fixes.sh
src/czero_apps/: __init__.py  main.py
src/czero_apps/apps/: __init__.py
src/czero_apps/apps/files/: __init__.py  app.py  view.py
src/czero_apps/apps/monitor/: __init__.py  app.py
src/czero_apps/apps/power/: __init__.py  app.py
src/czero_apps/apps/robot/: __init__.py  app.py
src/czero_apps/apps/settings/: app.py  backend.py  model.py
src/czero_apps/apps/store/: __init__.py  app.py
src/czero_apps/apps/terminal/: __init__.py  app.py
src/czero_apps/system/: appstore_backend.py  command.py  desktop.py  files.py  monitor_backend.py  settings_backend.py  single_instance.py  terminal_backend.py
src/czero_apps/ui/: app_window.py  card_page.py  dashboard.py  detail_page.py  dialog.py  gtk.py  ime.py  keymap.py  list_page.py  page_stack.py  split_page.py  status_bar.py  theme.py
